@@ -1,6 +1,6 @@
 from __future__ import division
 
-import os, codecs, base64, tempfile, urllib, gzip
+import os, codecs, base64, tempfile, urllib, gzip, md5
 
 from matplotlib import verbose, __version__, rcParams
 from matplotlib.backend_bases import RendererBase, GraphicsContextBase,\
@@ -125,7 +125,7 @@ class RendererSVG(RendererBase):
 
         id = self._clipd.get(path)
         if id is None:
-            id = 'p%x' % len(self._clipd)
+            id = 'p%s' % md5.new(path).hexdigest()
             self._svgwriter.write('<defs>\n  <clipPath id="%s">\n' % id)
             self._svgwriter.write(path)
             self._svgwriter.write('\n  </clipPath>\n</defs>')
@@ -189,7 +189,7 @@ class RendererSVG(RendererBase):
         key = self._convert_path(marker_path, marker_trans + Affine2D().scale(1.0, -1.0))
         name = self._markers.get(key)
         if name is None:
-            name = 'm%x' % len(self._markers)
+            name = 'm%s' % md5.new(key).hexdigest()
             write('<defs><path id="%s" d="%s"/></defs>\n' % (name, key))
             self._markers[key] = name
 
@@ -209,9 +209,10 @@ class RendererSVG(RendererBase):
         write('<defs>\n')
         for i, (path, transform) in enumerate(self._iter_collection_raw_paths(
             master_transform, paths, all_transforms)):
-            name = 'coll%x_%x' % (self._path_collection_id, i)
             transform = Affine2D(transform.get_matrix()).scale(1.0, -1.0)
             d = self._convert_path(path, transform)
+            name = 'coll%x_%x_%s' % (self._path_collection_id, i,
+                                     md5.new(d).hexdigest())
             write('<path id="%s" d="%s"/>\n' % (name, d))
             path_codes.append(name)
         write('</defs>\n')
@@ -398,8 +399,9 @@ class RendererSVG(RendererBase):
 
             if step[0] != 4:
                 currx, curry = step[-2], -step[-1]
-        char_num = 'c%x' % len(self._char_defs)
-        path_element = '<path id="%s" d="%s"/>\n' % (char_num, ''.join(path_data))
+        path_data = ''.join(path_data)
+        char_num = 'c_%s' % md5.new(path_data).hexdigest()
+        path_element = '<symbol id="%s"><path d="%s"/></symbol>\n' % (char_num, ''.join(path_data))
         self._char_defs[char_id] = char_num
         return path_element
 
