@@ -1,3 +1,6 @@
+2008-03-26 Fix SVG backend bug that prevents copying and pasting in
+           Inkscape (thanks Kaushik Ghose) - MGD
+
 2008-03-24 Removed an unnecessary call to draw() in the backend_qt*
            mouseReleaseEvent. Thanks to Ted Drain - DSD
 
